// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`English menu 1`] = `
<div>
  <div
    class="_toc_whole_wrapper_3064e4"
  >
    <div
      class="_toc_large_3064e4"
    >
      <div
        class="_tocWrapper_3064e4"
      >
        <nav
          class="_toc_3064e4"
        >
          <ol
            class="_tocList_3064e4"
          >
            <li
              class="_tocListItem_3a2e40 false"
              data-testid="tocItem"
            >
              <a
                data-testid="toc_a_#test-en"
                href="#test-en"
              >
                Test en
              </a>
            </li>
            <li
              class="_tocListItem_3a2e40 false"
              data-testid="tocItem"
            >
              <a
                data-testid="toc_a_#test-to"
                href="#test-to"
              >
                Test to
              </a>
            </li>
            <li
              class="_tocListItem_3a2e40 false"
              data-testid="tocItem"
            >
              <a
                data-testid="toc_a_#test-tre"
                href="#test-tre"
              >
                Test tre
              </a>
            </li>
            <li
              class="_tocListItem_3a2e40 false"
              data-testid="tocItem"
            >
              <a
                data-testid="toc_a_#test-fire"
                href="#test-fire"
              >
                Test fire
              </a>
            </li>
          </ol>
        </nav>
      </div>
    </div>
    <div
      class="_toc_small_wrapper_3064e4"
    >
      <div
        class="_toc_small_content_3064e4"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-bfv12m-MuiPaper-root-MuiAccordion-root"
        >
          <div
            aria-controls="toc-content"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-1d2bjxc-MuiButtonBase-root-MuiAccordionSummary-root"
            id="toc-header"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-eqpfi5-MuiAccordionSummary-content"
            >
              Table of contents
            </div>
            <div
              class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                color="#034584"
                fill="currentColor"
                font-size="large"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(3, 69, 132);"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
              >
                <div
                  aria-labelledby="toc-header"
                  class="MuiAccordion-region"
                  id="toc-content"
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                  >
                    <nav
                      class="_toc_3064e4"
                    >
                      <ol
                        class="_tocList_3064e4"
                      >
                        <li
                          class="_tocListItem_3a2e40 false"
                          data-testid="tocItem"
                        >
                          <a
                            data-testid="toc_a_#test-en"
                            href="#test-en"
                          >
                            Test en
                          </a>
                        </li>
                        <li
                          class="_tocListItem_3a2e40 false"
                          data-testid="tocItem"
                        >
                          <a
                            data-testid="toc_a_#test-to"
                            href="#test-to"
                          >
                            Test to
                          </a>
                        </li>
                        <li
                          class="_tocListItem_3a2e40 false"
                          data-testid="tocItem"
                        >
                          <a
                            data-testid="toc_a_#test-tre"
                            href="#test-tre"
                          >
                            Test tre
                          </a>
                        </li>
                        <li
                          class="_tocListItem_3a2e40 false"
                          data-testid="tocItem"
                        >
                          <a
                            data-testid="toc_a_#test-fire"
                            href="#test-fire"
                          >
                            Test fire
                          </a>
                        </li>
                      </ol>
                    </nav>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`English menu 2`] = `
<div>
  <div
    class="_toc_whole_wrapper_3064e4"
  >
    <div
      class="_toc_large_3064e4"
    >
      <div
        class="_tocWrapper_3064e4"
      >
        <nav
          class="_toc_3064e4"
        >
          <ol
            class="_tocList_3064e4"
          >
            <li
              class="_tocListItem_3a2e40 false"
              data-testid="tocItem"
            >
              <a
                data-testid="toc_a_#test-en"
                href="#test-en"
              >
                Test en
              </a>
            </li>
            <li
              class="_tocListItem_3a2e40 false"
              data-testid="tocItem"
            >
              <a
                data-testid="toc_a_#test-to"
                href="#test-to"
              >
                Test to
              </a>
              <ol
                class="_tocList_3064e4"
              >
                <li
                  class="_tocListItem_3a2e40 false"
                  data-testid="tocItem"
                >
                  <a
                    data-testid="toc_a_#test-to_kirurgiske-inngrep-for-endometriose"
                    href="#test-to_kirurgiske-inngrep-for-endometriose"
                  >
                    Kirurgiske inngrep for endometriose
                  </a>
                </li>
                <li
                  class="_tocListItem_3a2e40 false"
                  data-testid="tocItem"
                >
                  <a
                    data-testid="toc_a_#test-to_kirurgiske-inngrep-for-noe-annet"
                    href="#test-to_kirurgiske-inngrep-for-noe-annet"
                  >
                    Kirurgiske inngrep for noe annet
                  </a>
                </li>
              </ol>
            </li>
            <li
              class="_tocListItem_3a2e40 false"
              data-testid="tocItem"
            >
              <a
                data-testid="toc_a_#test-tre"
                href="#test-tre"
              >
                Test tre
              </a>
            </li>
            <li
              class="_tocListItem_3a2e40 false"
              data-testid="tocItem"
            >
              <a
                data-testid="toc_a_#test-fire"
                href="#test-fire"
              >
                Test fire
              </a>
            </li>
          </ol>
        </nav>
      </div>
    </div>
    <div
      class="_toc_small_wrapper_3064e4"
    >
      <div
        class="_toc_small_content_3064e4"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-bfv12m-MuiPaper-root-MuiAccordion-root"
        >
          <div
            aria-controls="toc-content"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-1d2bjxc-MuiButtonBase-root-MuiAccordionSummary-root"
            id="toc-header"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-eqpfi5-MuiAccordionSummary-content"
            >
              Table of contents
            </div>
            <div
              class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                color="#034584"
                fill="currentColor"
                font-size="large"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(3, 69, 132);"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
              >
                <div
                  aria-labelledby="toc-header"
                  class="MuiAccordion-region"
                  id="toc-content"
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                  >
                    <nav
                      class="_toc_3064e4"
                    >
                      <ol
                        class="_tocList_3064e4"
                      >
                        <li
                          class="_tocListItem_3a2e40 false"
                          data-testid="tocItem"
                        >
                          <a
                            data-testid="toc_a_#test-en"
                            href="#test-en"
                          >
                            Test en
                          </a>
                        </li>
                        <li
                          class="_tocListItem_3a2e40 false"
                          data-testid="tocItem"
                        >
                          <a
                            data-testid="toc_a_#test-to"
                            href="#test-to"
                          >
                            Test to
                          </a>
                        </li>
                        <li
                          class="_tocListItem_3a2e40 false"
                          data-testid="tocItem"
                        >
                          <a
                            data-testid="toc_a_#test-tre"
                            href="#test-tre"
                          >
                            Test tre
                          </a>
                        </li>
                        <li
                          class="_tocListItem_3a2e40 false"
                          data-testid="tocItem"
                        >
                          <a
                            data-testid="toc_a_#test-fire"
                            href="#test-fire"
                          >
                            Test fire
                          </a>
                        </li>
                      </ol>
                    </nav>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Norwegian menu 1`] = `
<div>
  <div
    class="_toc_whole_wrapper_3064e4"
  >
    <div
      class="_toc_large_3064e4"
    >
      <div
        class="_tocWrapper_3064e4"
      >
        <nav
          class="_toc_3064e4"
        >
          <ol
            class="_tocList_3064e4"
          >
            <li
              class="_tocListItem_3a2e40 false"
              data-testid="tocItem"
            >
              <a
                data-testid="toc_a_#test-en"
                href="#test-en"
              >
                Test en
              </a>
            </li>
            <li
              class="_tocListItem_3a2e40 false"
              data-testid="tocItem"
            >
              <a
                data-testid="toc_a_#test-to"
                href="#test-to"
              >
                Test to
              </a>
            </li>
            <li
              class="_tocListItem_3a2e40 false"
              data-testid="tocItem"
            >
              <a
                data-testid="toc_a_#test-tre"
                href="#test-tre"
              >
                Test tre
              </a>
            </li>
            <li
              class="_tocListItem_3a2e40 false"
              data-testid="tocItem"
            >
              <a
                data-testid="toc_a_#test-fire"
                href="#test-fire"
              >
                Test fire
              </a>
            </li>
          </ol>
        </nav>
      </div>
    </div>
    <div
      class="_toc_small_wrapper_3064e4"
    >
      <div
        class="_toc_small_content_3064e4"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-bfv12m-MuiPaper-root-MuiAccordion-root"
        >
          <div
            aria-controls="toc-content"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-1d2bjxc-MuiButtonBase-root-MuiAccordionSummary-root"
            id="toc-header"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-eqpfi5-MuiAccordionSummary-content"
            >
              Innholdsoversikt
            </div>
            <div
              class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                color="#034584"
                fill="currentColor"
                font-size="large"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(3, 69, 132);"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
              >
                <div
                  aria-labelledby="toc-header"
                  class="MuiAccordion-region"
                  id="toc-content"
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                  >
                    <nav
                      class="_toc_3064e4"
                    >
                      <ol
                        class="_tocList_3064e4"
                      >
                        <li
                          class="_tocListItem_3a2e40 false"
                          data-testid="tocItem"
                        >
                          <a
                            data-testid="toc_a_#test-en"
                            href="#test-en"
                          >
                            Test en
                          </a>
                        </li>
                        <li
                          class="_tocListItem_3a2e40 false"
                          data-testid="tocItem"
                        >
                          <a
                            data-testid="toc_a_#test-to"
                            href="#test-to"
                          >
                            Test to
                          </a>
                        </li>
                        <li
                          class="_tocListItem_3a2e40 false"
                          data-testid="tocItem"
                        >
                          <a
                            data-testid="toc_a_#test-tre"
                            href="#test-tre"
                          >
                            Test tre
                          </a>
                        </li>
                        <li
                          class="_tocListItem_3a2e40 false"
                          data-testid="tocItem"
                        >
                          <a
                            data-testid="toc_a_#test-fire"
                            href="#test-fire"
                          >
                            Test fire
                          </a>
                        </li>
                      </ol>
                    </nav>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
